--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 		</section>
 	
 		<section class="section about-section">
-			<div class="container">
+			<div class="container about-section__container">
 				<div class="about-section__content">
 					<h2 class="section-header about-section__header">
 						О нас
@@ -278,6 +278,7 @@
 					</div>
 				</div>
 			</div>
+			<div class="about-section__laptop"></div>
 		</section>
 	
 		<section class="section request-section">
